--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
@@ -18,6 +19,7 @@
     "react-scroll": "^1.9.0",
     "sass": "^1.75.0",
     "scss": "^0.2.4",
+    "swiper": "^11.1.1",
     "uninstall": "^0.0.0"
   },
   "devDependencies": {
