--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-scroll": "^1.9.0",
     "sass": "^1.75.0",
     "scss": "^0.2.4",
-    "swiper": "^11.1.1",
-    "uninstall": "^0.0.0"
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
